// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withDefaults should overwrite default values 1`] = `
Array [
  Array [
    Object {
      "breakpoints": Object {
        "large": 200,
        "medium": 100,
        "small": 0,
        "xlarge": 300,
        "xxlarge": 400,
      },
    },
  ],
]
`;

exports[`withDefaults should provide default values 1`] = `
Array [
  Array [
    Object {
      "breakpoints": Object {
        "large": 1024,
        "medium": 640,
        "small": 0,
        "xlarge": 1200,
        "xxlarge": 1440,
      },
    },
  ],
]
`;

exports[`withDefaults should provide values with defaults 1`] = `
Array [
  Array [
    Object {
      "AnchorComponent": [Function],
      "breakpoints": Object {
        "large": 1024,
        "medium": 640,
        "small": 0,
        "xlarge": 1200,
        "xxlarge": 1440,
      },
    },
  ],
]
`;

exports[`withDefaults should still provide default values without Provider 1`] = `
Array [
  Array [
    Object {
      "breakpoints": Object {
        "large": 1024,
        "medium": 640,
        "small": 0,
        "xlarge": 1200,
        "xxlarge": 1440,
      },
    },
  ],
]
`;
